--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Alexander Morris</h1>
+            <h2>Data Analyst</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                       Bachelor’s degree with four years plus experience in legal and two years of technical support. Specializing in personal injury litigation, construction litigation, and corporate law. Extensive legal knowledge, organization skills, invoicing, accounts receivable, ability to meet timely deadlines, typing speed of 40 – 50 words per minute, preparing case documents, time management, and excellent research skills. Ability to create social media content for the firm and manage podcast(s) for the company. Knowledgeable in multiple coding languages and statistical analysis. 
                     </p>
                 </div>
             </div>
@@ -86,28 +84,48 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="June 2022 – April 2023">
+                <h3>Adams & Reese, LLP</h3>
+                <h4>Office Services Coordinator</h4>
+                <ul>
+                    <li>Assisted over 35 attorneys with case preparation, legal documents, and critical date reminders for cases during tenure.</li>
+		    <li>Assisted in the management of accounts receivable and accounts payable for the firm.</li>
+		    <li>Communicated and resolved at least 50 technical and/or operational issues encountered</li>
+		    <li>Generated billing reports on a monthly basis</li>
+		    <li>Maintained an organized case filing system.</li>
+		    <li>Escalated and coordinated unresolved incidents to the appropriate parties</li>
+	            <li>Managed the purchasing, stocking, and distribution of office supplies.</li>
+		    <li>Provide on-time status and communication to clients regarding outstanding and resolved incidents.</li>
+		    <li>Reviewed and proofread legal documents for spelling and formatting errors on a weekly basis for attorneys.</li>
+		    <li>Undertook a minimum of  10 assigned projects and actively participated in improvement initiatives regarding tools and processes.</li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="August 2022 – May 2023">
+                <h3>Rebein Brothers, PA</h3>
+                <h4>Project Assistant</h4>
+                 <ul>
+                    <li>Collaborated with over 40 clients to gather and track case information during tenure.</li>
+		    <li>Prepared presentations and summaries of information for attorneys and clients to review case details.</li>
+		    <li>Identified risks and developed controls to detect and prevent inefficiencies in firm procedures.</li>
+		    <li>Reduced attorney research time by 30% by implementing an archived case system.</li>
+		    <li>Provided support on case projects by researching and summarizing studies (primarily medical journals) for attorney review.</li>
+		    <li>Responsible for recording, editing, and uploading 25+ podcast episodes on social media platforms.</li>
+	            <li>Scanned, converted, and organized records into electronic format with a consistent naming convention.</li>
+		    <li>Managed resolution of issues efficiently and professionally, manifested by a higher level of customer satisfaction</li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="August 2019 – August 2021">
+                <h3>Times Publishing</h3>
+                <h4>Senior Account Specialist</h4>
+                 <ul>
+                    <li>Utilized account data and service histories to identify trends.</li>
+		    <li>Provided initial assessment, Basic to Intermediate level troubleshooting, and when possible, provided resolutions of inbound issues.</li>
+		    <li>Utilized the company’s internal account system in order to track requests, document problems, and record solutions offered to clients.</li>
+		    <li>Provided consistent performance of the day-to-day tasks and assignments in compliance with established targets and metrics.</li>
+		    <li>Increased customer retention through utilizing personal expertise and company troubleshooting resolution tree to evaluate technical problems for customers.</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -116,9 +134,9 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>University of South Florida</h3>
+            <span class="education-date">August 2018 - May 2022</span>
+            <h4>Bachelor of Arts in Economics</h4>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
@@ -126,19 +144,22 @@
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>University of South Florida</h3>
+            <span class="education-date">August 2018 - May 2022</span>
+            <h4>Bachelor of Arts in Economics</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    GPA: 3.3 
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Member of Judy Genshaft Honors College (2018-2021)
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Member of Black Student Union (2018-2022)
                 </li>
+		<li>
+		    Emerging Scholars Award recipient (2018-2022)
+		</li>
             </ul>
         </div>
         <!-- End .education-block -->
