--- a/index.html
+++ b/index.html
@@ -137,16 +137,6 @@
             <h3>University of South Florida</h3>
             <span class="education-date">August 2018 - May 2022</span>
             <h4>Bachelor of Arts in Economics</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of South Florida</h3>
-            <span class="education-date">August 2018 - May 2022</span>
-            <h4>Bachelor of Arts in Economics</h4>
             <ul>
                 <li>
                     GPA: 3.3 
@@ -176,11 +166,12 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <h3>Food Poisoning Claims Data Analysis</h3>
+			<ul>
+			<li>Utilized a Database in MSSQL to analyze the online transactions of a multinational manufacturing company</li>
+			<li>Used Joins, Common Table Expressions, Aggregate functions, and Datatype conversions to drill down and explore data regarding company transactions</li>
+                        </ul>
+			<a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -192,10 +183,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                        <h3>AdventureWorks Data Analysis</h3>
+                        <ul>		
+                        <li>Utilized a Database in MSSQL to analyze the online transactions of a multinational manufacturing company</li>
+			<li>Used Joins, Common Table Expressions, Aggregate functions, and Datatype conversions to drill down and explore data regarding company transactions</li>
+                        </ul>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -209,32 +201,22 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Pandas</li>
+            <li>Matplotlib</li>
+            <li>Seaborn</li>
+            <li>Numpy</li>
+            <li>MySQL</li>
+            <li>PostGreSQL</li>
+            <li>MSSQL 2019</li>
+            <li>Tableau</li>
+            <li>Microsoft Excel</li>
+            <li>Pivot Tables</li>
+            <li>VLOOKUP</li>
+            <li>Microsoft Office Suite</li>
+            <li>Facebook Ads Manager</li>
+            <li>Google Ads</li>
+            <li>Troubleshooting</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -242,7 +224,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action=https://formspree.io/f/mgejvovw">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
