--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Alexander Morris</h1>
-            <h2>Data Analyst</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h2>Analyst</h2>
+              <a href="images/07_24_AlexanderMorrisResume.pdf" class="btn-rounded-white" download>Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       Bachelor’s degree with four years plus experience in legal and two years of technical support. Specializing in personal injury litigation, construction litigation, and corporate law. Extensive legal knowledge, organization skills, invoicing, accounts receivable, ability to meet timely deadlines, typing speed of 40 – 50 words per minute, preparing case documents, time management, and excellent research skills. Ability to create social media content for the firm and manage podcast(s) for the company. Knowledgeable in multiple coding languages and statistical analysis. 
+                       Bachelor’s degree with over four years experience in legal, and two years in technical/analytics support in addition to procurement/sourcing. Specializing in procurement of professional services. Extensive knowledge in project management, data collection/validation, drafting, data visualization, invoicing, accounts receivable, purchase order creation, and contract negotiation. Additional skills include proficiency in multiple coding languages and statistical analysis. 
                     </p>
                 </div>
             </div>
@@ -84,7 +84,34 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="June 2022 – April 2023">
+		<div data-date="February 2024 – Present">
+                <h3>Iconma - Raymond James & Associates, Inc.</h3>
+                <h4>Procurement Sourcing Analyst</h4>
+                <ul>
+			<li>Collaborated with a minimum of 7 internal departments to understand and fulfill their procurement needs effectively</li>
+    			<li>Conducted market research and cost analysis to identify opportunities for costs savings and process improvements, reducing procurement costs by 4% through strategic sourcing and negotiation</li>
+    			<li>Created and dispatched an average of $200K in purchase orders monthly</li>
+    			<li>Developed and maintained strong relationships with suppliers to ensure timely delivery of goods and services</li>
+    			<li>Executed an average of 16 contracts monthly</li>
+    			<li>Identified and corrected a minimum of 10 purchase order match exceptions</li>
+    			<li>Managed the end-to-end procurement process, including vendor selection, contract creation and purchase order creation</li>
+   			<li>Spearheaded a procurement fast-track program, increasing department productivity</li>
+                </ul>
+            </div>
+		
+		<div data-date="October 2023 – February 2024">
+                <h3>Iconma - Raymond James & Associates, Inc.</h3>
+                <h4>Procurement Contract Support Analyst</h4>
+                <ul>
+                    <li>Assisted in developing and implementing contract management policies and procedures.</li>
+		    <li>Coordinated with legal, finance, and procurement teams to address contract-related issues and facilitate smooth contract execution.</li>
+		    <li>Monitored, identified and resolved discrepancies in a minimum of 50 contracts monthly</li>
+		    <li>Received award of exemplary work for excellence in contract analysis and support.</li>
+		    <li>Reviewed, drafted and managed over 275 contracts to ensure compliance with legal and company standards.</li>
+                </ul>
+            </div>
+		
+		<div data-date="June 2022 – April 2023">
                 <h3>Adams & Reese, LLP</h3>
                 <h4>Office Services Coordinator</h4>
                 <ul>
@@ -101,7 +128,7 @@
                 </ul>
             </div>
 
-            <div data-date="August 2022 – May 2023">
+            <div data-date="August 2021 – May 2022">
                 <h3>Rebein Brothers, PA</h3>
                 <h4>Project Assistant</h4>
                  <ul>
@@ -156,47 +183,106 @@
     </div>
     <!-- End #education -->
 
-    <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
-        <div class="container">
-            <div class="row">
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Food Poisoning Claims Data Analysis</h3>
-			<ul>
-			<li>Utilized a Database in MSSQL to analyze the online transactions of a multinational manufacturing company</li>
-			<li>Used Joins, Common Table Expressions, Aggregate functions, and Datatype conversions to drill down and explore data regarding company transactions</li>
-                        </ul>
-			<a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
+    <div class="optional-section background-alt">
+    <h2 class="heading">Certifications</h2>
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>AdventureWorks Data Analysis</h3>
-                        <ul>		
-                        <li>Utilized a Database in MSSQL to analyze the online transactions of a multinational manufacturing company</li>
-			<li>Used Joins, Common Table Expressions, Aggregate functions, and Datatype conversions to drill down and explore data regarding company transactions</li>
-                        </ul>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
+    <div class="optional-section-block">
+        <h3>Associate Data Analyst</h3>
+        <ul>
+            <li>
+                Certifying Entity: DataCamp
+            </li>
+            <li> <a href="https://www.datacamp.com/certificate/DAA0015911757732">
+                Credential ID: DAA0015911757732
+	    </a></li>
+            <li>
+                Relevant Skills:
+		    <ul>
+			    <li>Python
+			    <ul>
+				    <li>Pandas</li>
+				    <li>Matplotlib</li>
+				    <li>Numpy</li>
+				    <li>Seaborn</li>
+			    </ul></li>
+		            <li> SQL
+			    <ul>
+				    <li>PostGreSQL</li>
+				    <li>MySQL</li>
+				    <li>MSSQL 2019</li>
+			    </ul></li>
+		    </ul>
+            </li>
+        </ul>
+    </div>
+    <!-- End .optional-section-block -->
+
+</div>
+<!-- End .optional-section -->
+
+<div id="projects" class="background-alt">
+    <h2 class="heading">Projects</h2>
+    <div class="container">
+        <div class="row">
+
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/PYSQL.png" width="300" height="300" />
                 </div>
-                <!-- End .project -->
+                <div class="project-info">
+                    <h3>Food Poisoning Claims Data Analysis</h3>
+                    <ul>
+                        <li>Utilized multiple libraries in <b>Python</b> as well as <b>SQL</b> to analyze and alter data related to Food Poisoning claims of a Brazilian fast food chain</li>
+                        <li>Created multiple views to summarize data</li>
+                    </ul>
+                    <a href="images/food_claims_2212_notebook.ipynb">View Project</a>
+                </div>
+                <!-- End .project-info -->
             </div>
+            <!-- End .project -->
+
+            <div class="project shadow-large">
+
+                <div class="project-image">
+                    <img src="images/Pandas_logo.svg.png" width="300" height="300" />
+                </div>
+                <!-- End .project-image -->
+
+                <div class="project-info">
+                    <h3>Avocado Toast Supply Chain Analysis</h3>
+                    <ul>
+                        <li>Utilized the <b>Pandas</b> library in order to conduct an analysis on the ingredients in avocado toast</li>
+                        <li>Used <b>lambda</b> functions and various other methods to gain a deeper understanding of the supply chain involved in producing this dish</li>
+                    </ul>
+                    <a href="images/food_claims_2212_notebook.ipynb">View Project</a>
+                </div>
+                <!-- End .project-info -->
+
+            </div>
+            <!-- End .project -->
+        </div>
+
+        <a id="view-more-projects" href="#">View More Projects</a>
+        <div id="more-projects" class="row">
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/sql-server-2019.png" width="300" height="300" />
+                </div>
+                <div class="project-info">
+                    <h3>AdventureWorks Data Analysis</h3>
+                    <ul>
+                        <li>Utilized a Database in <b>MSSQL</b> to analyze the online transactions of a multinational manufacturing company</li>
+                        <li>Used Joins, Common Table Expressions, Aggregate functions, and Datatype conversions to drill down and explore data regarding company transactions</li>
+                    </ul>
+                    <a href="images/AQDATABASE.sql">View Project</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
         </div>
     </div>
-    <!-- End #projects -->
+</div>
+<!-- End #projects -->
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
@@ -224,11 +310,19 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action=https://formspree.io/f/mgejvovw">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
+            <form 
+		action="https://formspree.io/alexandermorris135@gmail.com" 
+	        method="POST">
+<label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
             </form>
         </div>
         <!-- End #contact-form -->
@@ -240,7 +334,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2023</span> Alexander Morris
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -251,23 +345,11 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/alexandermorris2000/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
-                        <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+		        <li>
+				727-455-2422
+			</li>
                     </ul>
                 </div>
             </div>
